--- a/src/app/sample/sample.component.html
+++ b/src/app/sample/sample.component.html
@@ -20,6 +20,8 @@
   <button class="lipat" routerLink="/signup">Sign Up</button>
   
   <button class="lipat" routerLink="/login">Login</button>
+
+  <button class="lipat" routerLink="/posts">Back</button>
 <br>
 <form  #updateform="ngForm" (ngSubmit)="update(updateform.value)">
   <input type="text" ngModel id="email" hidden  [(ngModel)]="email" placeholder ="Change Email" name ="email">
