--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -3,9 +3,15 @@
 <div>
     <nav class="navbar navbar-dark bg-dark justify-content-center">
       <ul class="nav nav-brand">
-        <button class="btn-primary" routerLink="/login" (click)="logout()">Logout</button>
-  
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/samp">Lists of Accounts <span class="sr-only"></span></a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/login">Log out</a>
+        </li>
       </ul>
+
   </nav>
   </div>
   
