--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,7 +9,7 @@
 
           <input type="submit" id="saveData" name="signup_submit" value="Sign in" />
       </form>
-      <a href="login">Have an account? Login</a>
+      <a href="login">Have an account stfu?  Login</a>
   </div>
   
 
